--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-
+This project is a web based shopping system for an existing shop.The project objective is to deliver the online shopping application..This project is an attempt to provide the advantages of online shopping to
+customers of a real shop. It helps buying the products in the shopanywhere through internet by using a web site. Thus the customer will get the service of online shopping and home delivery from this shop.
